--- a/backend/mysite/homepage/templates/index.html
+++ b/backend/mysite/homepage/templates/index.html
@@ -21,6 +21,9 @@
         <button>
             <a href="{% url 'login' %}">Login</a>
         </button>
+        <button>
+            <a href="{% url 'register' %}">Register</a>
+        </button>
     </div>
 {% endblock %}
 </body>
