--- a/frontend/myfront/src/globalfonts.css
+++ b/frontend/myfront/src/globalfonts.css
@@ -20,6 +20,17 @@
     font-weight: normal;
     font-style: normal;
 }
-
+@font-face {
+    font-family: 'ZCOOL';
+    src: url('~@/assets/fonts/ZCOOLQingKeHuangYou-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'MSZ';
+    src: url('~@/assets/fonts/MaShanZheng-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 /* other global styles */
