--- a/frontend/myfront/src/globalfonts.css
+++ b/frontend/myfront/src/globalfonts.css
@@ -32,5 +32,11 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Msyh';
+    src: url('~@/assets/fonts/MicroSofyYaHei.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 /* other global styles */
