--- a/frontend/myfront/src/globalfonts.css
+++ b/frontend/myfront/src/globalfonts.css
@@ -27,8 +27,8 @@
     font-style: normal;
 }
 @font-face {
-    font-family: 'MSZ';
-    src: url('~@/assets/fonts/MaShanZheng-Regular.ttf') format('truetype');
+    font-family: 'WuHun';
+    src: url('~@/assets/fonts/AaWuHunTi-2.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -38,5 +38,10 @@
     font-weight: normal;
     font-style: normal;
 }
-
+@font-face {
+    font-family: 'WY';
+    src: url('~@/assets/fonts/WenYue-ZHJXinWeiTi-GBK-2.otf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 /* other global styles */
