double push test

--- a/frontend/myfront/src/globalfonts.css
+++ b/frontend/myfront/src/globalfonts.css
@@ -13,12 +13,18 @@
     :root {
         font-size: 0.5vw;
     }
+    #inner-content-wrapper{
+        width: 90vw;
+    }
 }
 
 /* For large screens */
 @media screen and (min-width: 1920px) {
     :root {
         font-size: 1vw;
+    }
+    #inner-content-wrapper{
+        width: 60vw;
     }
 }
 
