--- a/frontend/myfront/src/globalfonts.css
+++ b/frontend/myfront/src/globalfonts.css
@@ -82,6 +82,12 @@ pre{
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Inter';
+    src: url('~@/assets/fonts/Inter-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 @font-face {
     font-family: 'Lobster';
@@ -113,4 +119,3 @@ pre{
     font-weight: normal;
     font-style: normal;
 }
-/* other global styles */
